@@ -6,6 +6,7 @@ import i18n
 sources = """
           about_dialog.cc
           audio_dialog.cc
+          audio_gain_dialog.cc
           audio_mapping_view.cc
           audio_panel.cc
           audio_plot.cc
