@@ -69,25 +69,12 @@ BOOST_AUTO_TEST_CASE (stream_test)
 	BOOST_CHECK_EQUAL (a.channels, 2);
 	BOOST_CHECK_EQUAL (a.name, "hello there world");
 	BOOST_CHECK_EQUAL (a.mapping.content_channels(), 2);
-	BOOST_CHECK_EQUAL (a.mapping.content_to_dcp().size(), 4);
 
-	list<pair<int, libdcp::Channel> > m = a.mapping.content_to_dcp ();
-	list<pair<int, libdcp::Channel> >::iterator i = m.begin();
-
-	BOOST_CHECK_EQUAL (i->first, 0);
-	BOOST_CHECK_EQUAL (i->second, libdcp::LEFT);
-	++i;
-	
-	BOOST_CHECK_EQUAL (i->first, 0);
-	BOOST_CHECK_EQUAL (i->second, libdcp::CENTRE);
-	++i;
-	
-	BOOST_CHECK_EQUAL (i->first, 1);
-	BOOST_CHECK_EQUAL (i->second, libdcp::RIGHT);
-	++i;
-
-	BOOST_CHECK_EQUAL (i->first, 1);
-	BOOST_CHECK_EQUAL (i->second, libdcp::CENTRE);
-	++i;
+	BOOST_CHECK_EQUAL (a.mapping.get (0, libdcp::LEFT), 1);
+	BOOST_CHECK_EQUAL (a.mapping.get (0, libdcp::RIGHT), 0);
+	BOOST_CHECK_EQUAL (a.mapping.get (0, libdcp::CENTRE), 1);
+	BOOST_CHECK_EQUAL (a.mapping.get (1, libdcp::LEFT), 0);
+	BOOST_CHECK_EQUAL (a.mapping.get (1, libdcp::RIGHT), 1);
+	BOOST_CHECK_EQUAL (a.mapping.get (1, libdcp::CENTRE), 1);
 }
 
